--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+package-lock.json
 
 # Environment variables
 .env
@@ -38,4 +39,7 @@ logs/
 # Temporary files
 *.tmp
 *.temp
+
+/package-lock.json
+/package.json
 
