Prepare for Vercel deployment

--- a/vercel.json
+++ b/vercel.json
@@ -7,13 +7,24 @@
       "config": {
         "distDir": "build"
       }
+    },
+    {
+      "src": "server/app.js",
+      "use": "@vercel/node"
     }
   ],
   "routes": [
     {
+      "src": "/api/(.*)",
+      "dest": "server/app.js"
+    },
+    {
       "src": "/(.*)",
       "dest": "client/$1"
     }
-  ]
+  ],
+  "env": {
+    "NODE_ENV": "production"
+  }
 }
 
