--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,6 @@ node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-package-lock.json
 
 # Environment variables
 .env
@@ -40,7 +39,5 @@ logs/
 *.tmp
 *.temp
 
-/package-lock.json
-/package.json
-
-client/src/output.css
+# Custom folders
+ig/
