--- a/client/package.json
+++ b/client/package.json
@@ -4,11 +4,12 @@
   "description": "NeoSec React frontend application",
   "private": true,
   "dependencies": {
+    "axios": "^1.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "axios": "^1.6.2",
-    "react-router-dom": "^6.20.1"
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^6.20.1",
+    "react-scripts": "5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -35,4 +36,3 @@
     ]
   }
 }
-
