--- a/server/package.json
+++ b/server/package.json
@@ -17,18 +17,20 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
-    "sequelize": "^6.35.0",
-    "pg": "^8.11.3",
-    "pg-hstore": "^2.3.4",
+    "axios": "^1.13.2",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "bcryptjs": "^2.4.3",
+    "express": "^4.18.2",
+    "express-validator": "^7.0.1",
+    "form-data": "^4.0.5",
     "jsonwebtoken": "^9.0.2",
-    "express-validator": "^7.0.1"
+    "multer": "^2.0.2",
+    "pg": "^8.11.3",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.35.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
   }
 }
-
