--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,8 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^6.20.1",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "recharts": "^3.5.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -41,4 +42,3 @@
     "tailwindcss": "^3.4.13"
   }
 }
-
