--- a/.gitignore
+++ b/.gitignore
@@ -42,10 +42,14 @@ logs/
 # Custom folders
 ig/
 
-#QT Project files
+# QT Project files
 *.qmlproject
 *.qtds
 *.qrc
 
-#client auth credentials
+# client auth credentials
 **auth.json
+
+# VPN Configs
+*.ovpn
+*.conf
