--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,8 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^6.20.1",
     "react-scripts": "5.0.1",
-    "recharts": "^3.5.1"
+    "react-toastify": "^11.0.5",
+    "recharts": "^3.6.0"
   },
   "scripts": {
     "start": "react-scripts start",
