--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "node-cron": "^4.2.1",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.10.1"
+    "react-router-dom": "^7.10.1",
+    "stripe": "^20.1.0"
   }
 }
