--- a/server/package.json
+++ b/server/package.json
@@ -26,11 +26,11 @@
     "form-data": "^4.0.5",
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.2",
-    "jsonwebtoken": "^9.0.2",
     "node-cron": "^4.2.1",
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.35.0"
+    "sequelize": "^6.35.0",
+    "stripe": "^14.21.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
