--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "@getbrevo/brevo": "^3.0.1",
     "axios": "^1.13.2",
     "bcryptjs": "^2.4.3",
+    "check-disk-space": "^3.4.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
