--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,15 @@ neosec-desktop/data/
 
 # Documentation
 THREAT_BLOCKER_IMPLEMENTATION.md
+
+# Project Proposal/Report Files
+CSE471_Project_Report_NeoSec.*
+*.docx
+HOW_TO_ADD_POSTMAN_SCREENSHOTS.md
+POSTMAN_COLLECTION_*.json
+SAADAT_CODE_LOCATIONS.md
+
+# Test-related documentation files
+**/*TEST*.md
+**/*test*.md
+server/DATABASE_CONNECTION_TEST.md
