--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "tailwindcss": "^4.1.17"
   },
   "dependencies": {
+    "@getbrevo/brevo": "^3.0.1",
     "i18n-iso-countries": "^7.14.0",
     "node-cron": "^4.2.1",
     "react-icons": "^5.5.0",
