Modified dashboard functionality by adding dashboard refresh capability, improving VPN toggle API call, and updating user activity tracking.

--- a/.gitignore
+++ b/.gitignore
@@ -63,6 +63,7 @@ neosec-desktop/data/
 
 # Documentation
 THREAT_BLOCKER_IMPLEMENTATION.md
+PULL_AND_DEPLOY.md
 
 # Project Proposal/Report Files
 CSE471_Project_Report_NeoSec.*
