Refactor Activity Logs, Threat Blocker Status

--- a/.gitignore
+++ b/.gitignore
@@ -64,6 +64,7 @@ neosec-desktop/data/
 # Documentation
 THREAT_BLOCKER_IMPLEMENTATION.md
 PULL_AND_DEPLOY.md
+SAADAT_CSE471_Project_Report_NeoSec - Copy.md
 
 # Project Proposal/Report Files
 CSE471_Project_Report_NeoSec.*
