Fix: Resolve multiple minor bugs

--- a/.gitignore
+++ b/.gitignore
@@ -72,6 +72,7 @@ CSE471_Project_Report_NeoSec.*
 HOW_TO_ADD_POSTMAN_SCREENSHOTS.md
 POSTMAN_COLLECTION_*.json
 SAADAT_CODE_LOCATIONS.md
+GIT_BRANCH_WORKFLOW.md
 
 # Test-related documentation files
 **/*TEST*.md
