--- a/.gitignore
+++ b/.gitignore
@@ -83,3 +83,15 @@ server/DATABASE_CONNECTION_TEST.md
 **/FIX*.md
 **/*FIX*.md
 server/FIX_IMPERSONATION_TABLE.md
+
+# Saadat Explanation Files (keeping only essential ones)
+SAADAT_EXPLANATION_PART1_INTRODUCTION.md
+SAADAT_EXPLANATION_PART2_ADMIN_PANEL.md
+SAADAT_EXPLANATION_PART3_DASHBOARD.md
+SAADAT_EXPLANATION_PART4_FIREWALL.md
+SAADAT_EXPLANATION_PART5_THREAT_BLOCKER.md
+SAADAT_EXPLANATION_PART6_LOGS.md
+SAADAT_EXPLANATION_INDEX.md
+SAADAT_ALL_MODULES_FILE_FLOW_SUMMARY.md
+SAADAT_EXPLANATION_PART7_CONNECTIONS_VIVA.md
+SAADAT_LIVE_DEMO_CODE_CHANGES.md
